# emon-utils

./: .gitignore  LICENSE  README.md  setup.cfg
EmonUtils/: __init__.py  __main__.py
EmonUtils/DBIO/: __init__.py  dbio.py
EmonUtils/EmonIO/: __init__.py  emonio.py
EmonUtils/setup/: __init__.py  generate_config.py  generate_schema.py
