[metadata]
name = emon-utils
version = 0.3
author = George Vasiliadis
author_email = geor.vasiliadis@gmail.com
description = A simple integration set of utilities connecting EmonPi's ecosystem with CouchDB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GeorgeVasiliadis/emon-utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Utilities
    Topic :: System :: Installation/Setup
    Topic :: Home Automation
license = MIT License
license_files = LICENSE

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = .
